--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-scikit-learn
-scipy
-torch
-torchvision
-opencv-python
-matplotlib
-seaborn
-tqdm
-albumentations
-pylint
-gradio
-gradio_rangeslider
-gradio_image_annotation
+scikit-learn==1.6.1
+scipy==1.15.2
+torch==2.6.0
+torchvision==0.21.0
+opencv-python==4.11.0.86
+matplotlib==3.10.0
+seaborn==0.13.2
+tqdm==4.67.1
+albumentations==2.0.4
+pylint==3.3.4
+gradio==5.17.1
+gradio_rangeslider==0.0.8
+umap-learn==0.5.7
