--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,6 @@ pylint==3.3.4
 gradio==5.19.0
 gradio_rangeslider==0.0.8
 umap-learn==0.5.7
+# pip install git+https://github.com/openai/CLIP.git
+# pỳtorchvideo
+# vbench
